--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -247,6 +247,16 @@
                         <input type="text" placeholder="请输入水库名">
                         <i class="fa fa-search"></i>
                     </div>
+                    <div class="overview-video">
+                        <div class="video-outter">
+                            <div class="video-content">
+                                <a class="video-close">
+                                    <i class="fa fa-times"></i>
+                                </a>
+                                <object id="DPSDK_OCX" classid="CLSID:D3E383B6-765D-448D-9476-DFD8B499926D" style="width: 100%; height: 100%" codebase="DpsdkOcx.cab#version=1.0.0.0"></object>
+                            </div>
+                        </div>
+                    </div>
                     <div id="allmap"></div>
                 </div>
 
