--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -366,7 +366,7 @@
                                     <div class="form-group">
                                         <div class="row" style="box-shadow: 1px 0px 0px #e7eaec; margin-right: 5px" >
                                             <div class="col-lg-5">
-                                                <label>混泥土（万/m³）</label><span style="color:red;"> *</span>
+                                                <label>混凝土（万/m³）</label><span style="color:red;"> *</span>
                                                 <input id="concrete" name="concrete" type="text" class="form-control required number" maxlength="15">
                                             </div>
                                             <div class="col-lg-3">
