不稳定版本发布 下一步继续完善session过期处理

--- a/src/main/resources/templates/reservoir_index.html
+++ b/src/main/resources/templates/reservoir_index.html
@@ -761,10 +761,7 @@
                     data: data.legendData
                 },
                 tooltip: {
-                    trigger: 'axis',
-                    position: function (pt) {
-                        return [pt[0], '10%'];
-                    }
+                    trigger: 'axis'
                 },
                 grid: {
                     left: '4%',
@@ -780,7 +777,10 @@
                 },
                 yAxis: {
                     type: 'value',
-                    name: yName
+                    name: yName,
+                    min: function (value) {
+                        return (value.min - 10 > 0) ? value.min - 10 : 0;
+                    }
                 },
                 series: data.seriesData
             };
