--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,27 +49,54 @@
         <div class="sidebar-collapse">
             <ul class="nav metismenu" id="side-menu">
                 <li class="nav-header">
-                    <div class="dropdown profile-element">
-                        <span>
-                            <img id="profile_img" alt="image" class="img-circle"/>
-                        </span>
-                        <a id="person_menu" data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear">
-                                <span class="block m-t-xs" id="username">
-                                    <strong class="font-bold">口口口口口</strong>
-                                </span>
-                                <span class="text-muted text-xs block" id="name">
-                                     口口口口口
-                                </span>
+                    <shiro:hasAnyRoles name="reporter, checker, admin">
+                        <div class="dropdown profile-element">
+                            <span>
+                                <img id="profile_img" alt="image" class="img-circle"/>
                             </span>
-                        </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li id="person_info"><a>个人设置</a></li>
-                            <li><a href="#" id="account_config">账号设置</a></li>
-                            <li class="divider"></li>
-                            <li><a th:href="@{/logout}">安全退出</a></li>
-                        </ul>
-                    </div>
+
+                            <a id="person_menu" data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                <span class="clear">
+                                    <span class="block m-t-xs" id="username">
+                                        <strong class="font-bold">口口口口口</strong>
+                                    </span>
+                                    <span class="text-muted text-xs block" id="name">
+                                         口口口口口
+                                    </span>
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu animated fadeInRight m-t-xs">
+                                <li id="person_info"><a>个人设置</a></li>
+                                <li><a href="#" id="account_config">账号设置</a></li>
+                                <li class="divider"></li>
+                                <li><a th:href="@{/logout}">安全退出</a></li>
+                            </ul>
+                        </div>
+                    </shiro:hasAnyRoles>
+                    <shiro:hasAnyRoles name="manager, admin">
+                        <div class="dropdown profile-element">
+                            <span>
+                                <img id="profile_img" alt="image" class="img-circle"/>
+                            </span>
+
+                            <a id="" data-toggle="dropdown" class="dropdown-toggle" href="#">
+                                <span class="clear">
+                                    <span class="block m-t-xs">
+                                        <strong class="font-bold">当前：工程管理部</strong>
+                                    </span>
+                                    <span class="text-muted text-xs block" id="">
+                                         请选择水库...
+                                    </span>
+                                </span>
+                            </a>
+                            <ul class="dropdown-menu animated fadeInRight m-t-xs">
+                                <li id="person_info"><a>个人设置</a></li>
+                                <li><a href="#" id="account_config">账号设置</a></li>
+                                <li class="divider"></li>
+                                <li><a th:href="@{/logout}">安全退出</a></li>
+                            </ul>
+                        </div>
+                    </shiro:hasAnyRoles>
                     <div class="logo-element">
                         IN+
                     </div>
@@ -168,19 +195,27 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> <span
-                                class="nav-label">用户账户</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li>
-                                <a href="#" id="account_a"><i class="fa fa-magic"></i> <span class="nav-label">开通账户</span></a>
-                            </li>
-                            <li>
-                                <a href="#" id="account_management"><i class="fa fa-magic"></i> <span class="nav-label">账户管理</span></a>
-                            </li>
-                        </ul>
+                        <a href="#" id="reservoir_dic"><i class="fa fa-star"></i> <span class="nav-label">水库字典</span><span class="fa arrow"></span></a>
                     </li>
                     <li>
-                        <a href="#" id="reservoir_dic"><i class="fa fa-star"></i> <span class="nav-label">水库字典</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-sitemap"></i> <span
+                                class="nav-label">系统设置</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li>
+                                <a href="#"><i class="fa fa-sitemap"></i><span class="nav-label">账号管理</span><span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level collapse">
+                                    <li>
+                                        <a href="#" id="account_a"><i class="fa fa-magic"></i> <span class="nav-label">开通账户</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" id="account_management"><i class="fa fa-magic"></i> <span class="nav-label">账户管理</span></a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#" id="druid"><i class="fa fa-sitemap"></i> <span class="nav-label">系统状态</span></a>
+                            </li>
+                        </ul>
                     </li>
                 </shiro:hasAnyRoles>
             </ul>
