改进了管理部主页面地区高亮

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1613,6 +1613,7 @@
 <!-- 菜单选择层 -->
 <div id="region_select" class="animated fadeInRight">
     <div class="first-region">
+        <span class="triangle"></span>
         <ul>
             <li>
                 <a href="#">test1</a>
@@ -1630,7 +1631,7 @@
                 <a href="#">test1</a>
             </li>
         </ul>
-        <div class="second-region">
+        <div class="second-region animated fadeInUp">
             <ul>
                 <li>
                     <a href="#">二级</a>
@@ -1642,7 +1643,7 @@
                     <a href="#">二级</a>
                 </li>
             </ul>
-            <div class="third-region">
+            <div class="third-region animated fadeInUp">
                 <ul>
                     <li>
                         <a href="#">三级</a>
