--- a/src/main/resources/static/css/custom/self-theme.css
+++ b/src/main/resources/static/css/custom/self-theme.css
@@ -1244,3 +1244,64 @@ td>a.grid-link:hover {
     border-top: 0;
     height: 50px;
 }
+/* ----悬浮菜单新增---- */
+#region_select>.first-region>.triangle {
+    width: 0;
+    height: 0;
+    display: block;
+    border-width: 0 7px 7px 7px;
+    border-color: transparent transparent #fff transparent;
+    border-style: solid;
+    margin-left: 15px;
+}
+#region_select a {
+    color: #1ab394;
+}
+
+#region_select ul>li>span {
+    float: right;
+    clear: both;
+    position: relative;
+    right: 10px;
+    /* transform: rotate(90deg); */
+}
+.dom-selected {
+    background: #4fc7af!important;
+    color: #fff!important;
+    /* border-left: 3px solid #479588; */
+}
+.dom-selected>a {
+    color: #fff!important;
+}
+#region_select>div>ul>li:hover, .second-region>ul>li:hover, .third-region>ul>li:hover {
+    background: #4fc7af;
+    color: #fff;
+    border-left: 3px solid rgba(71, 149, 136, 0.5);
+}
+#region_select>div>ul>li:hover>a, .second-region>ul>li:hover>a, .third-region>ul>li:hover>a {
+    color: #fff!important;
+}
+
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
+::-webkit-scrollbar
+{
+    width: 2px;
+    height: 2px;
+    background-color: #F5F5F5;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: rgba(26, 179, 148, 0.5);
+}
