开始把Jpa换成mybatis

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1261,7 +1261,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="base_info_modal_close" type="button" class="btn btn-info">关闭</button>
+                <button class="btn btn-info base_info_modal_close" type="button">关闭</button>
             </div>
         </div>
     </div>
@@ -1435,7 +1435,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" id="pre_progress_submit" class="btn btn-info">提 交</button>
-                    <button class="pre_progress_modal_close" type="button" class="btn btn-info">关 闭</button>
+                    <button class="btn btn-info pre_progress_modal_close" type="button">关 闭</button>
                 </div>
             </div>
         </div>
